<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokemonActivity">

    <TextView
        android:id="@+id/tvPokedex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:text="@string/pokedex_title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPokedexSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/pokedex_subtitle"
        app:layout_constraintBottom_toTopOf="@id/svFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPokedex" />

    <EditText
        android:id="@+id/svFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/pokemon_search_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPokedexSubtitle"
        app:queryHint="@string/pokemon_search_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svFilter"
        tools:listitem="@layout/item_pokemon"
        tools:visibility="visible" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svFilter"
        app:shimmer_auto_start="true"
        app:shimmer_duration="1500">

        <LinearLayout
            android:id="@+id/viewLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_pokemon_loading" />

            <include layout="@layout/item_pokemon_loading" />

            <include layout="@layout/item_pokemon_loading" />

            <include layout="@layout/item_pokemon_loading" />

            <include layout="@layout/item_pokemon_loading" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>