<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokemonDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_auto_start="true"
            app:shimmer_duration="1500">

            <FrameLayout
                android:id="@+id/PokemonDetailBackgroundLoading"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="left"
                        android:layout_marginRight="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#555555" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="40dp"
                            android:layout_height="26dp"
                            android:layout_marginBottom="4dp"
                            android:background="#555555" />

                        <FrameLayout
                            android:layout_width="150dp"
                            android:layout_height="35dp"
                            android:layout_marginBottom="4dp"
                            android:background="#555555" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="75dp"
                                android:layout_height="26dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="16dp"
                                app:cardBackgroundColor="#555555"
                                app:cardCornerRadius="4dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="75dp"
                                android:layout_height="26dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="16dp"
                                app:cardBackgroundColor="#555555"
                                app:cardCornerRadius="4dp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/PokemonDetailBackgroundBottomLoading"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_marginTop="230dp"
                app:cardBackgroundColor="#C8C8C9"
                app:cardCornerRadius="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PokemonDetailBackground_Loading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="250dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="70dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="60dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="60dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="250dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="16dp"
                        android:background="#555555" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/PokemonDetailBackground"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/pokemon_background_grass">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:layout_marginRight="0dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivPokemonDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    tools:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPokemonDetailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pokemon_id"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="#001" />

                <TextView
                    android:id="@+id/tvPokemonDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="Bulbasaur" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvPokemonDetailType1"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="16dp"
                        app:cardCornerRadius="4dp"
                        tools:cardBackgroundColor="@color/pokemon_type_grass">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ivPokemonDetailType1"
                                android:layout_width="45px"
                                android:layout_height="45px"
                                android:layout_marginRight="4dp"
                                tools:src="@drawable/ic_pokemon_grass" />

                            <TextView
                                android:id="@+id/tvPokemonDetailType1"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:textSize="12dp"
                                android:textStyle="bold"
                                tools:text="Grass" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvPokemonDetailType2"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="4dp"
                        tools:cardBackgroundColor="@color/pokemon_type_poison">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ivPokemonDetailType2"
                                android:layout_width="45px"
                                android:layout_height="45px"
                                android:layout_marginRight="4dp"
                                tools:src="@drawable/ic_pokemon_poison" />

                            <TextView
                                android:id="@+id/tvPokemonDetailType2"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:textSize="12dp"
                                android:textStyle="bold"
                                tools:text="Poison" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/PokemonDetailBackgroundBottom"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:visibility="gone"
        app:cardCornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PokemonDetailBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPokedexData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pokemon_description_title"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:textColor="@color/pokemon_type_grass" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/pokedex_data_species"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPokemonDetailSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/pokedex_data_baseExperience"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPokemonDetailBaseExp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/pokedex_data_height"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPokemonDetailHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/pokedex_data_weight"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPokemonDetailWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitlePokemonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pokemon_description_title"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:textColor="@color/pokemon_type_grass" />

            <TextView
                android:id="@+id/tvPokemonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                tools:text="Lorem ipsum" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>